# GamingNewsPublisher

./: .gitignore  README.md  index.html  llama-qwen-err.txt  llama-test-err.txt  llama-test-err2.txt  package-lock.json  package.json  tmp_ign.html  vite.config.ts
launcher/: Cargo.toml
launcher/src/: main.rs
resources/llm/: .gitkeep
scripts/: build-portable.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_worker.rs  auto_publish_runtime.rs  auto_publish_scheduler.rs  backup_scheduler.rs  backup_scheduler_runtime.rs  fetch.rs  fetch_runtime.rs  fetch_schedule.rs  fetch_scheduler_runtime.rs  lib.rs  local_embed_runtime.rs  local_llm_runtime.rs  main.rs  models.rs  publish.rs  scheduler.rs
src-tauri/src/commands/: ai.rs  backup.rs  categories.rs  duplicates.rs  images.rs  local_llm.rs  mod.rs  posts.rs  proxy.rs  rss.rs  settings.rs  sources.rs  watermark.rs
src-tauri/src/db/: mod.rs
src-tauri/src/services/: backup.rs  content_filter.rs  custom_model_store.rs  data_dir.rs  dedup_pipeline.rs  deepseek.rs  duplicate.rs  embedding_dedup.rs  image_loader.rs  image_processor.rs  llm_dir.rs  local_llm_download.rs  local_llm_overview.rs  local_model_catalog.rs  mod.rs  post_text.rs  proxy.rs  rss_fetcher.rs  settings_store.rs  telegram_api.rs  vk_api.rs  vk_oauth.rs  watermark.rs  web_context.rs
src-tauri/src/services/ai/: cloud.rs  local.rs  mod.rs
src/lib/: dialog.ts  image.ts  tauri.ts  types.ts  utils.ts  watermark.ts
src/pages/: Categories.tsx  Dashboard.tsx  Duplicates.tsx  (+5 more)
(+16 files in other folders)
