[package]
name = "gaming-news-publisher"
version = "0.1.0"
description = "Gaming News Publisher for VK and Telegram"
authors = ["you"]
edition = "2021"

[lib]
name = "gaming_news_publisher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "socks"], default-features = false }
rss = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
anyhow = "1"
once_cell = "1"
atom_syndication = "0.12.8"
